# Btraj

./: CMakeLists.txt
launch/: simulation.launch
src/: b_traj_node.cpp  odom_generator.cpp  velocity_map.cpp
